--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -2,7 +2,7 @@ name: Deploy to dev
 
 on:
     push:
-        branches: [ master ]
+        branches: [ main ]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
