--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           npm ci
+          npm run build
       - uses: bacongobbler/azure-blob-storage-upload@v1.2.0
         with:
           source_dir: 'build'
